# agentic-capital

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  alembic.ini  docker-compose.yml  pyproject.toml  readme.md
.claude/commands/: agent-orchestration.md  ai-optimize.md  audit-autonomy.md  coverage.md  delivery-workflow.md  docs.md  evaluation.md  finalize.md  hexagonal-development.md  interface-first-development.md  observability.md  security.md  test.md  version.md
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_commission_to_trades.py  003_add_agent_tools.py  004_add_agent_cycles.py
docs/: 01-project-overview.md  02-ai-trends-research.md  03-psychology-models.md  04-feasibility.md  05-tech-stack.md  06-cost-estimation.md  07-references-papers.md  08-investment-api-guide.md  09-persona-investment-rules.md  10-organization-autonomy.md  11-data-model.md  12-data-format-research.md  13-detailed-tech-research.md  14-dependencies.md  15-env-variables.md  16-external-apis.md  17-infrastructure.md  18-korean-broker-api.md  18-korean-securities-api-comparison.md  19-design-summary.md  20-milestones.md  21-design-validation.md
src/agentic_capital/: __init__.py  config.py  futures.py  main.py
src/agentic_capital/adapters/: __init__.py  kis_session.py  kis_websocket.py
src/agentic_capital/adapters/llm/: gemini.py
src/agentic_capital/core/: __init__.py
src/agentic_capital/core/agents/: base.py  (+5 more)
src/agentic_capital/formats/: __init__.py  compact.py  markdown_kv.py  numerologic.py  toon.py
src/agentic_capital/graph/: __init__.py  nodes.py  state.py  workflow.py
src/agentic_capital/infra/: __init__.py  database.py  redis.py  tracing.py
src/agentic_capital/ports/: __init__.py  llm.py  market_data.py  trading.py
src/agentic_capital/simulation/: __init__.py  backtesting.py  clock.py  engine.py  export.py  futures_engine.py  recorder.py
tests/: conftest.py
tests/e2e/: test_scale.py  test_simulation_e2e.py
tests/integration/: test_db_crud.py  test_redis_working_memory.py
tests/unit/: test_agent_tools.py  test_agents.py  test_amem.py  test_backtesting.py  test_clock.py  test_communication.py  test_config.py  test_data_query.py  test_decision_pipeline.py  test_dynamic_tools.py  test_episodic_memory.py  test_export.py  test_factory.py  test_formats.py  test_futures.py  test_gemini_adapter.py  test_graph.py  test_kis_adapter.py  test_main.py  test_message_bus.py  test_migration.py  test_organization.py  test_orm_models.py  test_personality.py  test_ports.py  test_prompts.py  test_recorder.py  test_semantic_memory.py  test_simulation_engine.py  test_tracing.py  test_trading_paper.py  test_working_memory.py  test_yfinance_adapter.py
(+39 files in other folders)
